# vaultiel

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  PROJECT_PLAN.md  PROJECT_SPEC.md  README.md
fixtures/frontmatter/: Complex.md  Empty Frontmatter.md  Minimal.md  No Frontmatter.md
fixtures/links/: Embedded Note.md  Hub.md  Orphan.md  Page A.md  Page B.md
fixtures/minimal/: Note.md
fixtures/obako/: All Checkbox Symbols.md  All Task Metadata.md  Archived Note.md  Mixed Task Note.md
fixtures/obako/box/: 20260213_mafds6__boxyard.md
fixtures/obako/box-groups/: active.md  proj.md
fixtures/obako/cap/: 2026-02-27_14:30:22 Quick thought.md
fixtures/obako/con/: Some Concept.md
fixtures/obako/doc/: My document.md
fixtures/obako/ent/: Some Person.md
fixtures/obako/log/: 2026-02-27 Daily log.md
fixtures/obako/memo/: Design decision.md
fixtures/obako/mod/: Active Module.md
fixtures/obako/pad/: My scratch pad.md
fixtures/obako/plan/: 2026 w9.md  2026-02-27.md
fixtures/obako/proj/: Active Project.md  Done Project.md  Personal projects.md  Stream Project.md
fixtures/obako/ref/: A Paper.md
fixtures/tasks/: Project Tasks.md
fixtures/unicode/: Émojis 🎉.md  日本語ノート.md
phase_plans/: 01_core_cli.md  02_links_tags_blocks.md  03_tasks.md  04_vault_health.md  09_missing_features.md
skills/vaultiel-cli/: SKILL.md
vaultiel-cli/: Cargo.toml  package-lock.json  package.json  tsconfig.json
vaultiel-cli/src/: cli.ts  dispatch.ts  index.ts  main.rs  types.ts  vault-subcommands.ts
vaultiel-cli/src/commands/: graph.rs  meta.rs  mod.rs  parse.rs  read.rs  write.rs
vaultiel-node/: Cargo.toml  README.md  index.d.ts  package-lock.json  package.json
vaultiel-node-commands/: package-lock.json  package.json
vaultiel-node-commands/src/: dispatch.ts  parser.ts  types.ts  vault-subcommands.ts
vaultiel-node/examples/: README.md  basic-operations.ts  link-graph.ts  standalone-parsing.ts  task-analysis.ts
vaultiel-node/src/: lib.rs
vaultiel-obsidian/: package-lock.json  package.json  tsconfig.json
vaultiel-obsidian/src/: frontmatter-edit.ts  index.ts  obsidian-tasks.ts  types.ts  vault.ts
vaultiel-obsidian/src/parsers/: block-ids.ts  code-block.ts  headings.ts  inline-attrs.ts  inline-properties.ts  links.ts  search.ts  tags.ts  tasks.ts
vaultiel-obsidian/tests/: frontmatter-edit.test.ts
vaultiel-obsidian/tests/parsers/: block-ids.test.ts  headings.test.ts  inline-attrs.test.ts  inline-properties.test.ts  links.test.ts  tags.test.ts  task-trees.test.ts  tasks.test.ts
vaultiel-py/: Cargo.toml  README.md  build.rs  pyproject.toml
vaultiel-py/examples/: README.md  basic_operations.py  link_graph.py  standalone_parsing.py  task_analysis.py
vaultiel-py/python/vaultiel/: __init__.py  __init__.pyi
vaultiel-py/src/: lib.rs
vaultiel-rs/: Cargo.toml  README.md
vaultiel-rs/examples/: README.md  basic_operations.sh  export_graph.sh  link_graph.sh  lint_and_health.sh  tasks.sh
vaultiel-rs/src/: config.rs  error.rs  lib.rs  main.rs  metadata.rs  note.rs  types.rs  vault.rs
vaultiel-rs/src/cache/: index.rs  mod.rs  types.rs
vaultiel-rs/src/cli/: args.rs  blocks.rs  cache.rs  content.rs  create.rs  delete.rs  export.rs  frontmatter.rs  headings.rs  info.rs  inspect.rs  links.rs  lint.rs  list.rs  metadata.rs  mod.rs  output.rs  rename.rs  resolve.rs  search.rs  tags.rs  tasks.rs
vaultiel-rs/src/export/: cypher.rs  jsonld.rs  mod.rs
vaultiel-rs/src/graph/: link_graph.rs  mod.rs  resolution.rs
vaultiel-rs/src/health/: mod.rs
vaultiel-rs/src/parser/: block_id.rs  code_block.rs  frontmatter.rs  heading.rs  inline_attr.rs  inline_property.rs  mod.rs  tag.rs  task.rs  wikilink.rs
vaultiel-rs/src/search/: matcher.rs  mod.rs  parser.rs  types.rs
vaultiel-rs/tests/: integration_test.rs  obako_test.rs
