[package]
name = "vaultiel-cli"
version = "0.1.0"
edition = "2021"
description = "Fast CLI for Obsidian-style vault operations"
license = "MIT"

[[bin]]
name = "vaultiel"
path = "src/main.rs"

[dependencies]
vaultiel = { path = "../vaultiel-rs" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rayon = "1"
