[package]
name = "vaultiel-node"
version = "0.1.0"
edition = "2024"
description = "Node.js bindings for Vaultiel - A CLI and library for Obsidian-style vaults"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
vaultiel = { path = "../vaultiel-rs" }
napi = { version = "2", features = ["napi9", "serde-json"] }
napi-derive = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[build-dependencies]
napi-build = "2"
