[package]
name = "vaultiel-py"
version = "0.1.0"
edition = "2024"
description = "Python bindings for Vaultiel - A CLI and library for Obsidian-style vaults"
license = "MIT"

[lib]
name = "vaultiel_py"
crate-type = ["cdylib"]

[dependencies]
vaultiel = { path = "../vaultiel-rs" }
pyo3 = { version = "0.28", features = ["extension-module"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
