[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "vaultiel"
version = "0.1.0"
description = "A library for programmatically interacting with Obsidian-style vaults"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Typing :: Typed",
]
keywords = ["obsidian", "markdown", "notes", "vault", "zettelkasten"]

[project.urls]
Homepage = "https://github.com/lukas/vaultiel"
Repository = "https://github.com/lukas/vaultiel"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "vaultiel"
