[package]
name = "vaultiel"
version = "0.1.0"
edition = "2024"
description = "A library for programmatically interacting with Obsidian-style vaults"
license = "MIT"
repository = "https://github.com/lukas/vaultiel"
keywords = ["obsidian", "markdown", "notes"]
categories = ["text-processing"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
glob = "0.3"
regex = "1"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
serde_json = "1"

[lib]
name = "vaultiel"
path = "src/lib.rs"
